--- a/src/NotDeadYet.MVC4/NotDeadYet.MVC4.csproj
+++ b/src/NotDeadYet.MVC4/NotDeadYet.MVC4.csproj
@@ -1,6 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net40</TargetFramework>
+    <id>NotDeadYet.MVC4</id>
+    <Version>0.0.0</Version>
+    <title>NotDeadYet.MVC4</title>
+    <authors>Andrew Harcourt</authors>
+    <owners>Andrew Harcourt</owners>
+    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>MVC4 integration for NotDeadYet.</description>
+    <releaseNotes>.</releaseNotes>
+    <copyright>Copyright 2015 Andrew Harcourt</copyright>
+    <tags>NotDeadYet health check application monitor MVC4</tags>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Web" />
