--- a/src/NotDeadYet.Nancy/NotDeadYet.Nancy.csproj
+++ b/src/NotDeadYet.Nancy/NotDeadYet.Nancy.csproj
@@ -1,6 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net40</TargetFramework>
+    <id>NotDeadYet.Nancy</id>
+    <Version>0.0.0</Version>
+    <title>NotDeadYet.Nancy</title>
+    <authors>Andrew Harcourt</authors>
+    <owners>Andrew Harcourt</owners>
+    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Nancy integration for NotDeadYet.</description>
+    <releaseNotes>.</releaseNotes>
+    <copyright>Copyright 2015 Andrew Harcourt</copyright>
+    <tags>NotDeadYet health check application monitor Nancy NancyFX</tags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nancy" Version="1.4.4" />
