--- a/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
+++ b/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
@@ -1,6 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net40</TargetFramework>
+    <id>NotDeadYet.WebApi</id>
+    <Version>0.0.0</Version>
+    <title>NotDeadYet.WebApi</title>
+    <authors>Andrew Harcourt</authors>
+    <owners>Andrew Harcourt</owners>
+    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>WebApi integration for NotDeadYet.</description>
+    <releaseNotes>.</releaseNotes>
+    <copyright>Copyright 2015 Andrew Harcourt</copyright>
+    <tags>NotDeadYet health check application monitor WebApi</tags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="4.0.30506.0" />
