--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -2,6 +2,20 @@
 
   <PropertyGroup>
     <TargetFrameworks>net40;netstandard1.6</TargetFrameworks>
+    <id>NotDeadYet</id>
+    <version>0.0.0</version>
+    <title>NotDeadYet</title>
+    <authors>Andrew Harcourt</authors>
+    <owners>Andrew Harcourt</owners>
+    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>A simple way of exposing application health checks in .NET applications.</description>
+    <releaseNotes>.</releaseNotes>
+    <copyright>Copyright 2015 Andrew Harcourt</copyright>
+    <tags>health check application monitor</tags>
+    <AssemblyVersion>0.0.1.0</AssemblyVersion>
+    <FileVersion>0.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6'">
