--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -22,5 +22,9 @@
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6'">
     <PackageReference Include="System.Linq.Parallel" Version="4.3.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
   
 </Project>
