--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net40;netstandard1.6</TargetFrameworks>
     <id>NotDeadYet</id>
-    <version>0.1.0</version>
+    <Version>0.0.0</Version>
     <title>NotDeadYet</title>
     <authors>Andrew Harcourt</authors>
     <owners>Andrew Harcourt</owners>
