--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net40;netstandard1.6</TargetFrameworks>
-    <id>NotDeadYet</id>
+    <PackageId>NotDeadYet2</PackageId>
     <Version>0.0.0</Version>
     <title>NotDeadYet</title>
     <authors>Andrew Harcourt</authors>
@@ -19,6 +19,7 @@
     <RepositoryUrl>https://github.com/uglybugger/NotDeadYet</RepositoryUrl>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
+
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6'">
