--- a/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
+++ b/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
@@ -4,13 +4,13 @@
     <id>NotDeadYet.WebApi</id>
     <Version>0.0.0</Version>
     <title>NotDeadYet.WebApi</title>
-    <authors>Andrew Harcourt</authors>
+    <Authors>Andrew Harcourt</Authors>
     <owners>Andrew Harcourt</owners>
-    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>WebApi integration for NotDeadYet.</description>
-    <releaseNotes>.</releaseNotes>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/uglybugger/NotDeadYet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/uglybugger/NotDeadYet</RepositoryUrl>
+    <Description>WebApi integration for NotDeadYet.</Description>
     <copyright>Copyright 2015 Andrew Harcourt</copyright>
     <tags>NotDeadYet health check application monitor WebApi</tags>
   </PropertyGroup>
