--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -2,23 +2,20 @@
 
   <PropertyGroup>
     <TargetFrameworks>net40;netstandard1.6</TargetFrameworks>
-    <PackageId>NotDeadYet2</PackageId>
+    <PackageId>NotDeadYet</PackageId>
     <Version>0.0.0</Version>
     <title>NotDeadYet</title>
-    <authors>Andrew Harcourt</authors>
-    <owners>Andrew Harcourt</owners>
-    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/uglybugger/NotDeadYet</projectUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A simple way of exposing application health checks in .NET applications.</description>
-    <releaseNotes>.</releaseNotes>
-    <copyright>Copyright 2015 Andrew Harcourt</copyright>
-    <tags>health check application monitor</tags>
+    <Authors>Andrew Harcourt</Authors>
+    <Owners>Andrew Harcourt</Owners>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/uglybugger/NotDeadYet</PackageProjectUrl>
     <RepositoryUrl>https://github.com/uglybugger/NotDeadYet</RepositoryUrl>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <FileVersion>0.0.0.0</FileVersion>
+    <Description>A simple way of exposing application health checks in .NET applications.</Description>
+    <releaseNotes>.</releaseNotes>
+    <copyright>Copyright 2015 Andrew Harcourt</copyright>
+    <tags>health check application monitor</tags>
+
 
   </PropertyGroup>
 
