--- a/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
+++ b/src/NotDeadYet.WebApi/NotDeadYet.WebApi.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/uglybugger/NotDeadYet</RepositoryUrl>
     <Description>WebApi integration for NotDeadYet.</Description>
     <copyright>Copyright 2015 Andrew Harcourt</copyright>
-    <tags>NotDeadYet health check application monitor WebApi</tags>
+    <PackageTags>NotDeadYet health check application monitor WebApi</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="4.0.30506.0" />
