--- a/src/NotDeadYet/NotDeadYet.csproj
+++ b/src/NotDeadYet/NotDeadYet.csproj
@@ -12,11 +12,8 @@
     <PackageProjectUrl>https://github.com/uglybugger/NotDeadYet</PackageProjectUrl>
     <RepositoryUrl>https://github.com/uglybugger/NotDeadYet</RepositoryUrl>
     <Description>A simple way of exposing application health checks in .NET applications.</Description>
-    <releaseNotes>.</releaseNotes>
     <copyright>Copyright 2015 Andrew Harcourt</copyright>
-    <tags>health check application monitor</tags>
-
-
+    <PackageTags>health check application monitor</PackageTags>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6'">
