--- a/src/NotDeadYet.AspNetCore/NotDeadYet.AspNetCore.csproj
+++ b/src/NotDeadYet.AspNetCore/NotDeadYet.AspNetCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Jamleck Nyaga, Andrew Harcourt</Authors>
+    <Authors>Jamleck, Andrew Harcourt</Authors>
     <Version>0.0.0</Version>
     <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/uglybugger/NotDeadYet</PackageProjectUrl>
